[package]
name = "driver"
version = "0.0.0"
edition = "2021"

[dependencies]
cranelift = { version = "0.103" }
cranelift-native = { version = "0.103" }
cranelift-object = { version = "0.103" }
cranelift-module = { version = "0.103" }
target-lexicon = { version = "0.12.12" }

chumsky = { version = "1.0.0-alpha.6" }

compiler = { path = "../compiler" }
lexer = { path = "../lexer" }

yansi = "1.0.0-rc.1"
num_cpus = "1.16.0"
tempfile = { version = "3.9" }
anyhow = { version = "1.0.79" }
concolor = { version = "0.1.1", features = ["auto", "api"] }
clap = { version = "4.4.11", features = ["derive"] }
anstyle = { version = "1.0.4" }